agregado director de proyecto

--- a/charter.tex
+++ b/charter.tex
@@ -1,6 +1,6 @@
 \documentclass[
 11pt, % The default document font size, options: 10pt, 11pt, 12pt
-codirector, % Uncomment to add a codirector to the title page
+%codirector, % Uncomment to add a codirector to the title page
 ]{charter} 
 
 \usepackage{enumitem}
@@ -17,11 +17,11 @@ codirector, % Uncomment to add a codirector to the title page
 %\posgrado{Maestría en Internet de las cosas}
 
 % Tu nombre, se puede usar el cualquier lugar del documento con el comando \authorname
-\autor{Lucas Constantino} 
+\autor{Ing. Lucas Constantino} 
 
 % El nombre del director y co-director, se puede usar el cualquier lugar del documento con el comando \supname y \cosupname y \pertesupname y \pertecosupname
-\director{Nombre del Director}
-\pertenenciaDirector{pertenencia} 
+\director{Dr. Ing. Alejandro Ghersin}
+\pertenenciaDirector{FIUBA} 
 % FIXME:NO IMPLEMENTADO EL CODIRECTOR ni su pertenencia
 \codirector{John Doe} % para que aparezca en la portada se debe descomentar la opción codirector en el documentclass
 \pertenenciaCoDirector{FIUBA}
@@ -153,7 +153,7 @@ Este equipo se enmarca como uno de los denominados Equipamiento Eléctrico de So
 Rol           & Nombre y Apellido & Organización 	& Puesto 	\\ \hline
 Cliente       & \clientename      &\empclientename	& Jefe de Proyecto	\\ \hline
 Responsable   & \authorname       & FIUBA        	& Alumno 	\\ \hline
-Orientador    & \supname	      & \pertesupname 	& Director Trabajo final \\ \hline
+Orientador    & \supname	      & \pertesupname 	& Director de Trabajo final \\ \hline
 %Equipo        & - &              	&        	\\ \hline
 Usuario final & -                 & Skyloom Global	& Dpto. de Integración y Testing	\\ \hline
 \end{tabularx}
